Fix alignment and borders, mostly

--- a/app/assets/stylesheets/includes/globals.scss
+++ b/app/assets/stylesheets/includes/globals.scss
@@ -4,5 +4,8 @@
 // ////////////////////////////////////////////////////////////
 // Layout
 
+// TODO: Get rid of this along with Bootstrap
+$container-width: 960px;
+
 // TODO: Something more sophisticated that works properly w/iPhone X
 $media-breakpoint-width: 832px;
