--- a/app/assets/stylesheets/includes/table.scss
+++ b/app/assets/stylesheets/includes/table.scss
@@ -43,7 +43,6 @@ table {
 
   tr {
     th {
-      border-bottom: 1px solid $color-row-divider;
       padding: $margin-small $margin;
       white-space: nowrap;
 
@@ -56,7 +55,6 @@ table {
     }
 
     td {
-      border-bottom: 1px solid $color-row-divider;
       padding: $margin-small;
 
       &.copyright {
@@ -71,13 +69,9 @@ table {
       }
     }
 
-    &:last-child {
-      th {
-        border-bottom: none;
-      }
-
-      td {
-        border-bottom: none;
+    &:not(:first-child) {
+      th, td {
+        border-top: 1px solid $color-row-divider;
       }
     }
   }
