--- a/app/assets/stylesheets/lending/item.scss
+++ b/app/assets/stylesheets/lending/item.scss
@@ -26,6 +26,14 @@ section {
       tr {
         display: contents;
       }
+
+      td {
+        word-break: break-all;
+
+        &.description, &.copyright {
+          word-break: normal;
+        }
+      }
     }
   }
 }
@@ -36,32 +44,23 @@ section {
 @media (min-width: $media-breakpoint-width) {
   section {
     &.item {
-      width: $media-breakpoint-width;
-      max-width: $media-breakpoint-width;
+      width: 100%;
 
       table {
         display: grid;
-        grid-template-columns: min-content 1fr;
+        grid-template-columns: min-content minmax(0, 1fr);
 
         thead {
           th {
             grid-column: 1 / 3;
             text-align: left;
-          }
-        }
-
-        tr {
-          &:last-child {
-            th {
-              border-bottom: 0;
-            }
+            white-space: normal;
           }
         }
 
         th {
           grid-column: 1;
           text-align: right;
-          white-space: nowrap;
 
           &.action {
             grid-column: 2;
@@ -71,9 +70,11 @@ section {
 
         td {
           grid-column: 2;
+          word-break: break-all;
 
           &.description, &.copyright {
             grid-column: 1 / 3;
+            word-break: normal;
           }
 
           &.viewer {
@@ -97,7 +98,8 @@ section {
 @media (max-width: $media-breakpoint-width) {
   section {
     &.item {
-      margin: $margin-xlarge;
+      margin-top: $margin-xlarge;
+      margin-bottom: $margin-xlarge;
       font-size: 12pt;
 
       table {
@@ -106,7 +108,7 @@ section {
 
         tbody {
           th {
-            border-bottom: 0;
+            border-top: 0;
             padding-bottom: 0;
           }
 
